8217955: Fix ignored touch screen input in gdk-3.4+