modules/javafx.graphics/src/main/native-glass/gtk/glass_general.h
@@ -42,6 +42,22 @@
 #define GLASS_GTK3
 #endif
 
+// Only request events that will be properly handled. Using GDK_ALL_EVENTS_MASK
+// can have unintended consequences, e.g. it includes GDK_TOUCH_MASK which turns
+// off button press/release events for touch devices and delivers GDK_TOUCH_*
+// events instead.
+#define SUPPORTED_GDK_EVENTS static_cast<GdkEventMask>(                \
+               GDK_EXPOSURE_MASK | GDK_POINTER_MOTION_MASK |           \
+               GDK_BUTTON_MOTION_MASK | GDK_BUTTON1_MOTION_MASK |      \
+               GDK_BUTTON2_MOTION_MASK | GDK_BUTTON3_MOTION_MASK |     \
+               GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK |       \
+               GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK |             \
+               GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK |         \
+               GDK_FOCUS_CHANGE_MASK | GDK_STRUCTURE_MASK |            \
+               GDK_PROPERTY_CHANGE_MASK | GDK_VISIBILITY_NOTIFY_MASK | \
+               GDK_PROXIMITY_IN_MASK | GDK_PROXIMITY_OUT_MASK |        \
+               GDK_SUBSTRUCTURE_MASK | GDK_SCROLL_MASK)
+
 #define JLONG_TO_PTR(value) ((void*)(intptr_t)(value))
 #define PTR_TO_JLONG(value) ((jlong)(intptr_t)(value))
 
